--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -6,6 +8,8 @@
   :root {
     --background: 0 0% 100%;
     --foreground: 0 0% 3.9%;
+
+    --main: 122, 39%, 49%);
 
     --card: 0 0% 100%;
     --card-foreground: 0 0% 3.9%;
@@ -73,4 +77,16 @@
   body {
     @apply bg-background text-foreground;
   }
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  font-family: 'Poppins', sans-serif;
+}
+
+.poppins {
+  font-family: 'Poppins', sans-serif;
 }
